# The-Brain

./: .env.example  .pre-commit-config.yaml  Dockerfile.thebrain  README.md  app.py  compose.yml  pyproject.toml  requirements.txt
backend/: config.py  dependencies.py  jobs.py  llm_providers.py  neo4j_utils.py  reranker.py
backend/routers/: documents.py  graph.py  system.py
frontend/: index.html  main.js  style.css
